--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ targetCompatibility = 1.8
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
 
+// Project version
+version = '2.0.0'
+archivesBaseName = 'mongo-lucene-mailor'
+
 // Versions
 ext.luceneVersion = '5.3.0'
 ext.mongoVersion = '2.12.3'
