--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
 
 // Project version
-version = '2.0.0'
+version = '2.0.1'
 archivesBaseName = 'mongo-lucene-mailor'
 
 // Versions
@@ -29,10 +29,12 @@ dependencies {
 	compile("org.apache.lucene:lucene-queryparser:${luceneVersion}")
 	compile("org.apache.lucene:lucene-analyzers-common:${luceneVersion}")
 	compile("org.mongodb:mongo-java-driver:${mongoVersion}")
-	compile("com.github.mongoutils:mongo-collections:${mongoCollectionsVersion}")
+	compile("com.github.mongoutils:mongo-collections:${mongoCollectionsVersion}"){
+		exclude group: 'com.fasterxml.jackson.core'
+	}
 	testCompile("junit:junit:${jUnitVersion}")
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.6'
+    gradleVersion = '2.7'
 }
